--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "third_party/ruy"]
 	path = third_party/ruy
 	url = https://github.com/google/ruy
+[submodule "third_party/XNNPACK"]
+	path = third_party/XNNPACK
+	url = https://github.com/google/XNNPACK.git
